# ubuntu-ui-toolkit

./: .bzrignore  .qmake.conf  CHANGES  CMakeLists.txt  README  TODO  components.api  export_modules_dir.sh  gallery.sh  mir.json  mir.pro  push_to_phone.sh  qfeedback.cpp  qfeedback.h  quickplus.pro  rumble.qml  run_tests.sh  snapcraft.yaml  ubuntu-sdk.pro  ubuntu-sdk.qmlproject  uitk_shell.sh  uitk_uninstalled.sh  version.pri
documentation/: CMakeLists.txt  conf.py  docs.sh  documentation.pri  documentation.pro  make.bat  overview.qdoc  settings.qdoc  ubuntu-ui-toolkit-common.qdocconf  ubuntu-ui-toolkit-offline.qdocconf  ubuntu-ui-toolkit-online.qdocconf
documentation/_build/doctrees/: environment.pickle  index.doctree  ubuntuuitoolkit.doctree
documentation/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  ubuntuuitoolkit.html
documentation/autopilot-helpers/: conf.py
documentation/autopilot-helpers/_static/: nature.css
documentation/styleguides/: combobutton-styleguide.qdocinc
examples/locale/: CMakeLists.txt  locale.pro  locale.qml
examples/ubuntu-ui-toolkit-gallery/: AppSettings.qml  Buttons.qml  CMakeLists.txt  Dialog.qml  ExampleContextMenu.qml  Headers.qml  Icons.qml  ListItems.qml  ListItemsSection.qml  Localization.qml  MainPage.qml  NewListItems.qml  OptionSelectors.qml  Pickers.qml  Popover.qml  Radios.qml  Scrollbars.qml  Sections.qml  Sheet.qml  Sliders.qml  Styles.qml  Template.qml  TemplateRow.qml  TemplateSection.qml  TemplateSectionNavigation.qml  TextInputs.qml  Toggles.qml  Toolbar.qml  UbuntuShape.qml  WebLink.qml  WidgetsModel.qml  gallery-logging.config  ubuntu-ui-toolkit-gallery.pro  ubuntu-ui-toolkit-gallery.qml
examples/ubuntu-ui-toolkit-gallery/po/: CMakeLists.txt  de.po  es.po  fr.po  po.pro  pt.po
modules/: CMakeLists.txt  ubuntu-ui-toolkit.pro
modules/Ubuntu/Components/: AbstractButton.qml  ActivityIndicator.qml  AppHeader.qml  Button.qml  CMakeLists.txt  Captions.qml  CheckBox.qml  ComboButton.qml  Components.pro  CrossFadeImage.qml  Flickable.qml  FramedImage.qml  GridView.qml  Header.qml  Icon.qml  ImageContainer.qml  InputHandler.qml  Label.qml  ListItemContainer.qml  ListItemLayout.qml  ListItemPanel.qml  ListView.qml  Magnifier.qml  MainView.qml  MainView2.qml  MainViewBase.qml  Option.qml  OptionSelector.qml  OptionSelectorDelegate.qml  OrientationHelper.qml  Page.qml  PageHeadConfiguration.qml  PageStack.qml  PageTreeNode.qml  PageWrapper.qml  PageWrapperUtils.js  Panel.qml  ProgressBar.qml  ProgressBar10.qml  PullToRefresh.qml  (+27 more)
modules/Ubuntu/ComponentsEmbedded/: AbstractButton.qml  ActionItem.qml  ActionList.qml  ActivityIndicator.qml  AnimatedItem.qml  AppHeader.qml  Button.qml  CheckBox.qml  ComboButton.qml  Components.qrc  InputHandler.qml  MainView.qml  OptionSelector.qml  OptionSelectorDelegate.qml  Page10.qml  Page11.qml  PageHeadConfiguration.qml  PageStack.qml  PageTreeNode.qml  Panel.qml  ProgressBar.qml  Scrollbar.qml  Slider.qml  Switch.qml  TabBar.qml  TextArea.qml  TextCursor.qml  TextField.qml  Toolbar.qml  ToolbarButton.qml  ToolbarItems.qml  UbuntuListView.qml  UbuntuListView11.qml  qmldir
modules/Ubuntu/Layouts/: CMakeLists.txt
modules/Ubuntu/PerformanceMetrics/: CMakeLists.txt
modules/Ubuntu/Test/: CMakeLists.txt  UbuntuTestCase.qml
po/: CMakeLists.txt  fr.po  po.pro  update-pot.sh
tests/: CMakeLists.txt  DropShadowTest.qml  Rect.qml  RectAA.qml  RotatingLogo.qml  UbuntuShapeTest.qml  Windows.qml  layout_dependency.cmake  packaging-sorting.sh  plugin_dependency.cmake  qmlapicheck.py  qmlapicheck.sh  qtprivate_dependency.cmake  tests.pro  uitk_test_plan.sh  xvfb.sh
tests/Gallery/: gallery
tests/api/: api.pro
tests/apicheck/: apicheck.cpp
tests/autopilot/: CMakeLists.txt
tests/autopilot/ubuntuuitoolkit/: __init__.py  base.py  emulators.py  fixture_setup.py
tests/launcher/: CMakeLists.txt
tests/resources/: magnifier.qml
tests/resources/alarm/: Alarms.qml
tests/resources/header/: header.qml  panels.qml  splitHeader.qml  splitView.qml
tests/resources/listitems/: Expansion.qml  ListItemActionsTab.qml  ListItemCaptionsTab.qml  ListItemDragging.qml  ListItemExpansion.qml  ListItemGallery.qml  ListItemLayoutTab.qml  ListItemTab.qml  ListItemTest.qml
tests/resources/listlayouts/: TestSuite.qml
tests/resources/menus/: QuickControls.qml
tests/resources/navigation/: PageStack.qml  SimpleTabs.qml  Tabs.qml  TabsOnStack.qml
tests/resources/pagestack/: MyCustomPage.qml  PageStack.qml
tests/resources/pickers/: PanelTest.qml
tests/resources/popover/: PopoverTest.qml
tests/resources/styleset/: Simple.qml
tests/resources/toolbar/: toolbar.qml
tests/resources/ubuntushape/: FillTest.qml  FrameTest.qml  QuadTest.qml  ShadowTest.qml  UbuntuShapeOverlayTest.qml  UbuntuShapeTest.qml  ZoomPan.qml
tests/resources/ubuntushape2/: UbuntuShape2Test.qml
tests/unit/: CMakeLists.txt  add_qmlmakecheck.pri  plugin_dependency.pri  qmltest-setup.cmake  qtprivate_dependency.pri  runtest.sh  test-setup.cmake  unit.pro
tests/unit/alarms/: alarms.pro
tests/unit/testparser/: CMakeLists.txt
tests/unit/tst_alarms/: CMakeLists.txt  tst_alarms.cpp
tests/unit/tst_argument/: CMakeLists.txt  tst_argument.cpp
tests/unit/tst_arguments/: CMakeLists.txt
tests/unit/tst_components/: CMakeLists.txt  tst_abstractbutton.qml  tst_action.qml  tst_actionitem.qml  tst_checkbox.qml  tst_clipboard.qml  tst_mainview.qml  tst_pagestack.qml  tst_tab.qml
tests/unit/tst_components_benchmark/: CMakeLists.txt  tst_components_benchmark.cpp
tests/unit/tst_i18n/: CMakeLists.txt  tst_i18n.pro
tests/unit/tst_mainview/: CMakeLists.txt  tst_mainview.cpp
tests/unit/tst_performance/: ButtonGrid13.qml  CMakeLists.txt  ListOfCaptions.qml  ListOfStandard.qml  ListOfStandardLayout.qml  ListOfStandardLayoutWithOptions.qml  OldLabelGrid.qml  TextGrid.qml  TextWithStyling.qml  TextWithStylingGrid.qml  tst_performance.cpp  tst_performance.pro
tests/unit_x11/: CMakeLists.txt  add_makecheck.pri  qmltest-setup.cmake  test-setup.cmake  unit_x11.pro
(+954 files in other folders)
