add_subdirectory(tst_components)
add_subdirectory(tst_ubuntu_shape)
add_subdirectory(tst_page)
add_subdirectory(tst_test)
add_subdirectory(tst_inversemousearea)
add_subdirectory(tst_recreateview)
add_subdirectory(tst_statesaver)
add_subdirectory(tst_theme_engine)
add_subdirectory(tst_orientation)
add_subdirectory(tst_layouts)
add_subdirectory(tst_mousefilters)
add_subdirectory(tst_animator)
